# CNN-Scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: dataloader.h  layer.h  loss.h  model.h  optimizer.h  tensor.h
src/: dataloader.cpp  layer.cpp  linearLayer.cpp  loss.cpp  model.cpp  optimizer.cpp  tensor.cpp
